https://bugs.webkit.org/show_bug.cgi?id=55347 "name" and "message" enumerable on *Error.prototype

Reviewed by Sam Weinig.

This arises from chapter 15 of the spec:
    "Every other property described in this clause has the attributes
    { [[Writable]]: true, [[Enumerable]]: false, [[Configurable]]: true }
    unless otherwise specified."
Standardized properties are not enumerable.

Source/JavaScriptCore:

* runtime/ErrorInstance.cpp:
(JSC::ErrorInstance::ErrorInstance):
* runtime/NativeErrorPrototype.cpp:
(JSC::NativeErrorPrototype::NativeErrorPrototype):

LayoutTests:

* fast/js/exception-properties-expected.txt: Added.
* fast/js/exception-properties.html: Added.
* fast/js/script-tests/exception-properties.js: Added.
(enumerableProperties):



Canonical link: https://commits.webkit.org/77964@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@88559 268f45cc-cd09-0410-ab3c-d52691b4dbfc